--- a/adm.html
+++ b/adm.html
@@ -45,6 +45,7 @@
                                         <th scope="col" class="text-center">Telefone</th>
                                         <th scope="col" class="text-center">Celular</th>
                                         <th scope="col" class="text-center">Email</th>
+                                        <th scope="col" class="text-center">Operações</th>
                                     </tr>
                                 </thead>
                             </table>
