--- a/index.html
+++ b/index.html
@@ -69,35 +69,37 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <div class="form-group">
-                        <input type="text" name="NOME" id="NOME" placeholder="Nome da empresa" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <input type="text" name="TIPO" id="TIPO" placeholder="Tipo serviço" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <input type="text" name="BAIRRO" id="BAIRRO" placeholder="Bairro" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <input type="text" name="RUA" id="RUA" placeholder="Rua" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <input type="text" name="NUMERO" id="NUMERO" placeholder="Número" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <input type="text" name="TELEFONE" id="TELEFONE" placeholder="Telefone" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <input type="text" name="CELULAR" id="CELULAR" placeholder="Celular" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <input type="text" name="EMAIL" id="EMAIL" placeholder="Email" class="form-control">
-                    </div>
+                    <form id="form-cad">
+                        <div class="form-group">
+                            <input type="text" name="NOME" id="NOME" placeholder="Nome da empresa" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" name="TIPO" id="TIPO" placeholder="Tipo serviço" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" name="BAIRRO" id="BAIRRO" placeholder="Bairro" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" name="RUA" id="RUA" placeholder="Rua" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" name="NUMERO" id="NUMERO" placeholder="Número" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" name="TELEFONE" id="TELEFONE" placeholder="Telefone" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" name="CELULAR" id="CELULAR" placeholder="Celular" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" name="EMAIL" id="EMAIL" placeholder="Email" class="form-control">
+                        </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
                     <button type="button" class="btn btn-primary" id="btn-save">Salvar</button>
                 </div>
+                </form>
             </div>
         </div>
     </div>
