--- a/adm.html
+++ b/adm.html
@@ -33,7 +33,7 @@
                     </div>
                     <div class="card-body">
                         <div class="table-responsive">
-                            <table class="table table-hover" id="table-servico">
+                            <table class="table table-hover" id="table-adm">
                                 <thead class="thead-dark">
                                     <tr>
                                         <th scope="col" class="text-center">ID</th>
@@ -86,35 +86,37 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <div class="form-group">
-                        <input type="text" name="NOME" id="NOME" placeholder="Nome da empresa" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <input type="text" name="TIPO" id="TIPO" placeholder="Tipo serviço" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <input type="text" name="BAIRRO" id="BAIRRO" placeholder="Bairro" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <input type="text" name="RUA" id="RUA" placeholder="Rua" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <input type="text" name="NUMERO" id="NUMERO" placeholder="Número" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <input type="text" name="TELEFONE" id="TELEFONE" placeholder="Telefone" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <input type="text" name="CELULAR" id="CELULAR" placeholder="Celular" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <input type="text" name="EMAIL" id="EMAIL" placeholder="Email" class="form-control">
-                    </div>
+                    <form id="form-adm">
+                        <div class="form-group">
+                            <input type="text" name="NOME" id="NOME" placeholder="Nome da empresa" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" name="TIPO" id="TIPO" placeholder="Tipo serviço" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" name="BAIRRO" id="BAIRRO" placeholder="Bairro" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" name="RUA" id="RUA" placeholder="Rua" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" name="NUMERO" id="NUMERO" placeholder="Número" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" name="TELEFONE" id="TELEFONE" placeholder="Telefone" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" name="CELULAR" id="CELULAR" placeholder="Celular" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" name="EMAIL" id="EMAIL" placeholder="Email" class="form-control">
+                        </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
                     <button type="button" class="btn btn-primary" id="btn-save">Salvar</button>
                 </div>
+                </form>
             </div>
         </div>
     </div>
