--- a/adm.html
+++ b/adm.html
@@ -27,7 +27,7 @@
                                 <h4 class="text-dark">Gerenciar Serviços</h4>
                             </div>
                             <div class="col-12 col-md-3">
-                                <button type="button" class="btn btn-dark btn-new btn-block" data-toggle="modal" data-target="#cadastro"><i class="mdi mdi-plus-circle"></i> Adicionar</button>
+                                <button type="button" class="btn btn-dark btn-new btn-block"><i class="mdi mdi-plus-circle"></i> Adicionar</button>
                             </div>
                         </div>
                     </div>
@@ -114,8 +114,8 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-                    <button type="button" class="btn btn-primary" id="btn-save">Salvar</button>
+                    <button type="button" class="btn btn-primary " id="btn-save">Salvar</button>
+                    <button type="button" class="btn btn-primary btn-update" id="editar">Editar</button>
                 </div>
 
             </div>
@@ -137,6 +137,7 @@
     <script src="js/function-menu.js"></script>
     <script src="libs/sweetalert2/dist/sweetalert2.js"></script>
     <script src="libs/DataTables/datatables.js"></script>
+    <script src="src/administracao/controle/new-adm.js"></script>
     <script src="src/administracao/controle/create-adm.js"></script>
     <script src="src/administracao/controle/list-adm.js"></script>
     <script src="src/administracao/controle/view-adm.js"></script>
