--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <a class="navbar-brand" href="#">Services</a>
         <ul class="navbar-nav">
             <li class="nav-item">
-                <!-- Button trigger modal -->
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#telacliente">
+
+                <button type="button" class="btn btn-primary btn-create">
                     Seja nosso cliente!
                 </button>
             </li>
@@ -58,7 +58,7 @@
         </div>
     </div>
 
-    <!-- Modal -->
+
     <div class="modal fade" id="telacliente" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -95,10 +95,6 @@
                             <input type="text" name="EMAIL" id="EMAIL" placeholder="Email" class="form-control">
                         </div>
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-                    <button type="button" class="btn btn-primary" id="btn-save">Salvar</button>
-                </div>
                 </form>
             </div>
         </div>
@@ -110,6 +106,7 @@
     <script src="js/bootstrap.js"></script>
     <script src="libs/sweetalert2/dist/sweetalert2.js"></script>
     <script src="js/function-menu.js"></script>
+    <script src="src/servico/controle/new-servico.js"></script>
     <script src="src/servico/controle/filter-servico.js"></script>
     <script src="src/servico/controle/view-servico.js"></script>
     <script src="src/servico/controle/create-servico.js"></script>
