--- a/src/servico/visao/form-servico.html
+++ b/src/servico/visao/form-servico.html
@@ -1,41 +1,31 @@
-<form>
-    <div class="form-group row">
-        <div class="col-3">
-            <label>Nome</label>
-            <input type="text" name="nome" id="nome" class="form-control" readonly>
-        </div>
-        <div class="col-9">
-            <label>Tipo</label>
-            <input type="text" name="tipo" id="tipo" class="form-control" readonly>
-        </div>
+<form id="form-cad">
+    <div class="form-group">
+        <input type="text" name="NOME" id="NOME" placeholder="Nome da empresa" class="form-control">
     </div>
-    <div class="form-group row">
-        <div class="col-3">
-            <label>Bairro</label>
-            <input type="text" name="bairro" id="bairro" class="form-control" readonly>
-        </div>
-        <div class="col-6">
-            <label>Rua</label>
-            <input type="text" name="rua" id="rua" class="form-control" readonly>
-        </div>
-        <div class="col-6">
-            <label>Número</label>
-            <input type="text" name="numero" id="numero" class="form-control" readonly>
-        </div>
+    <div class="form-group">
+        <input type="text" name="TIPO" id="TIPO" placeholder="Tipo serviço" class="form-control">
     </div>
-    <div class="form-group row">
-        <div class="col-10">
-            <label>Telefone</label>
-            <input type="text" name="telefone" id="telefone" class="form-control" readonly>
-        </div>
-        <div class="col-2">
-            <label>Celular</label>
-            <input type="text" name="celular" id="celular" class="form-control" readonly>
-        </div>
-        <div class="col-2">
-            <label>Email</label>
-            <input type="text" name="email" id="email" class="form-control" readonly>
-        </div>
+    <div class="form-group">
+        <input type="text" name="BAIRRO" id="BAIRRO" placeholder="Bairro" class="form-control">
     </div>
-    <input type="hidden" name="idcategoria" id="idcategoria">
+    <div class="form-group">
+        <input type="text" name="RUA" id="RUA" placeholder="Rua" class="form-control">
+    </div>
+    <div class="form-group">
+        <input type="text" name="NUMERO" id="NUMERO" placeholder="Número" class="form-control">
+    </div>
+    <div class="form-group">
+        <input type="text" name="TELEFONE" id="TELEFONE" placeholder="Telefone" class="form-control">
+    </div>
+    <div class="form-group">
+        <input type="text" name="CELULAR" id="CELULAR" placeholder="Celular" class="form-control">
+    </div>
+    <div class="form-group">
+        <input type="text" name="EMAIL" id="EMAIL" placeholder="Email" class="form-control">
+    </div>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+        <button type="button" class="btn btn-primary" id="btn-save">Salvar</button>
+    </div>
 </form>
