--- a/src/administracao/visao/form-adm.html
+++ b/src/administracao/visao/form-adm.html
@@ -1,35 +1,31 @@
-<form id="form-adm">
+<form id="form-cad">
     <div class="form-group">
-        <label>Nome do serviço</label>
-        <input type="text" name="NOME" id="NOME" class="form-control">
+        <input type="text" name="NOME" id="NOME" placeholder="Nome da empresa" class="form-control">
     </div>
     <div class="form-group">
-        <label>Tipo</label>
-        <input type="text" name="TIPO" id="TIPO" class="form-control">
+        <input type="text" name="TIPO" id="TIPO" placeholder="Tipo serviço" class="form-control">
     </div>
     <div class="form-group">
-        <label>Bairro</label>
-        <input type="text" name="BAIRRO" id="BAIRRO" class="form-control">
+        <input type="text" name="BAIRRO" id="BAIRRO" placeholder="Bairro" class="form-control">
     </div>
     <div class="form-group">
-        <label>Rua</label>
-        <input type="text" name="RUA" id="RUA" class="form-control">
+        <input type="text" name="RUA" id="RUA" placeholder="Rua" class="form-control">
     </div>
     <div class="form-group">
-        <label>Número</label>
-        <input type="text" name="NUMERO" id="NUMERO" class="form-control">
+        <input type="text" name="NUMERO" id="NUMERO" placeholder="Número" class="form-control">
     </div>
     <div class="form-group">
-        <label>Telefone</label>
-        <input type="text" name="TELEFONE" id="TELEFONE" class="form-control">
+        <input type="text" name="TELEFONE" id="TELEFONE" placeholder="Telefone" class="form-control">
     </div>
     <div class="form-group">
-        <label>Celular</label>
-        <input type="text" name="CELULAR" id="CELULAR" class="form-control">
+        <input type="text" name="CELULAR" id="CELULAR" placeholder="Celular" class="form-control">
     </div>
     <div class="form-group">
-        <label>Email</label>
-        <input type="text" name="EMAIL" id="EMAIL" class="form-control">
+        <input type="text" name="EMAIL" id="EMAIL" placeholder="Email" class="form-control">
     </div>
-    <input type="hidden" name="ID" id="ID">
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+        <button type="button" class="btn btn-primary" id="btn-save">Salvar</button>
+    </div>
 </form>
