--- a/index.html
+++ b/index.html
@@ -94,8 +94,12 @@
                         <div class="form-group">
                             <input type="text" name="EMAIL" id="EMAIL" placeholder="Email" class="form-control">
                         </div>
+                    </form>
                 </div>
-                </form>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+                    <button type="button" class="btn btn-primary btn-save">Salvar</button>
+                </div>
             </div>
         </div>
     </div>
